Moved the "Colors.lib" file to "TextFormat.lib"

--- a/install/.Bash-utils/config/modules/main/Aliases.conf
+++ b/install/.Bash-utils/config/modules/main/Aliases.conf
@@ -179,7 +179,7 @@ alias BU.CheckProjectRelatedFile='BU.Main.Checkings.CheckProjectRelatedFile';
 #### SUB-CATEGORY : "TEXT CHECKINGS"
 
 alias BU.CheckDecho='BU.Main.Checkings.CheckDecho';
-alias BU.CheckTextFormat='BU.Main.Checkings.CheckTextFormat';
+alias BU.CheckTextFormat='BU.Main.TextFormat.SetTextFormat';
 
 # -----------------------------------------------
 
@@ -224,23 +224,23 @@ alias BU.GetCommandReturnOutputValue='BU.Main.CMDS.GetCommandReturnOutputValue';
 
 ## SUB-CATEGORY : ""
 
-alias BU.Col.CannotCreateRessource='BU.Main.Colors.CannotCreateRessource';
-alias BU.GetBGColorCMD='BU.Main.Colors.GetBGColorFromCMD';
-alias BU.GetTextColorFromCMD='BU.Main.Colors.GetTextColorFromCMD';
+alias BU.Col.CannotCreateRessource='BU.Main.TextFormat.CannotCreateRessource';
+alias BU.GetBGColorCMD='BU.Main.TextFormat.GetBGColorFromCMD';
+alias BU.GetTextColorFromCMD='BU.Main.TextFormat.GetTextColorFromCMD';
 
 # -----------------------------------------------
 
 ## SUB-CATEGORY : ""
 
-alias BU.SetBGColor='BU.Main.Colors.SetBGColor';
-alias BU.SetTextColor='BU.Main.Colors.SetTextColor';
+alias BU.SetBGColor='BU.Main.TextFormat.SetBGColor';
+alias BU.SetTextColor='BU.Main.TextFormat.SetTextColor';
 
 # -----------------------------------------------
 
 ## SUB-CATEGORY : ""
 
-alias BU.ColAtoi='BU.Main.Colors.Atoi';
-alias BU.ColItoa='BU.Main.Colors.Itoa';
+alias BU.ColAtoi='BU.Main.TextFormat.Atoi';
+alias BU.ColItoa='BU.Main.TextFormat.Itoa';
 
 # -----------------------------------------------
 
