--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -21,13 +21,13 @@ function BU.Main.ModConfig.Text.PrintTextModeCmdSubs()  { printf "This command s
 ## TEXT FORMATTING
 
 # Writing the command substitution text when a formatting is defined.
-function BU.Main.ModConfig.Text.PrintFormatCmdSubs()    { printf "This command substitution executes the « BU.Main.Checkings.CheckTextFormat() » function in order to format the text with the defined « %s » text formatting" "$1"; }
+function BU.Main.ModConfig.Text.PrintFormatCmdSubs()    { printf "This command substitution executes the « BU.Main.TextFormat.SetTextFormat() » function in order to format the text with the defined « %s » text formatting" "$1"; }
 
 # Writing the command substitution text when a resetting is defined.
-function BU.Main.ModConfig.Text.PrintResetCmdSubs()     { printf "This command substitution executes the « BU.Main.Checkings.CheckTextFormat() » function in order to reset the text from the « %s » text formatting" "$1"; }
+function BU.Main.ModConfig.Text.PrintResetCmdSubs()     { printf "This command substitution executes the « BU.Main.TextFormat.SetTextFormat() » function in order to reset the text from the « %s » text formatting" "$1"; }
 
 # Writing the command substitution text when a total resetting is defined.
-function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "This command substitution executes the « BU.Main.Checkings.CheckTextFormat() » function in order to reset the text from the every text formatting"; }
+function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "This command substitution executes the « BU.Main.TextFormat.SetTextFormat() » function in order to reset the text from the every text formatting"; }
 
 # -----------------------------------------------
 
@@ -121,36 +121,36 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "$__BU
 function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 {
     # Blink
-    __BU_MAIN_TXT_FMT_BLINK="$(BU.Main.Checkings.CheckTextFormat                'blink' '5'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK'                 "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_blink_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_BLINK_RESET="$(BU.Main.Checkings.CheckTextFormat          'sgr0'  '25'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK_RESET'           "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_blink_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_BLINK="$(BU.Main.TextFormat.SetTextFormat                 'blink' '5'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK'                 "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_blink_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_BLINK_RESET="$(BU.Main.TextFormat.SetTextFormat           'sgr0'  '25'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BLINK_RESET'           "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_blink_reset_lineno="$LINENO";
 
     # Bold
-    __BU_MAIN_TXT_FMT_BOLD="$(BU.Main.Checkings.CheckTextFormat                 'bold'  '1'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD'                  "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_bold_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_BOLD_RESET="$(BU.Main.Checkings.CheckTextFormat           ''      '0'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD_RESET'            "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_bold_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_BOLD="$(BU.Main.TextFormat.SetTextFormat                  'bold'  '1'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD'                  "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_bold_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_BOLD_RESET="$(BU.Main.TextFormat.SetTextFormat            ''      '0'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_BOLD_RESET'            "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_bold_reset_lineno="$LINENO";
 
     # Dim
-    __BU_MAIN_TXT_FMT_DIM="$(BU.Main.Checkings.CheckTextFormat                  'dim'   '2'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM'                   "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_dim_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_DIM_RESET="$(BU.Main.Checkings.CheckTextFormat            ''      '22'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM_RESET'             "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_dim_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_DIM="$(BU.Main.TextFormat.SetTextFormat                   'dim'   '2'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM'                   "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_dim_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_DIM_RESET="$(BU.Main.TextFormat.SetTextFormat             ''      '22'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_DIM_RESET'             "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_dim_reset_lineno="$LINENO";
 
     # Hidden (useful for password typing).
-    __BU_MAIN_TXT_FMT_HIDDEN="$(BU.Main.Checkings.CheckTextFormat               ''      '8'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN'                "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_hidden_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU.Main.Checkings.CheckTextFormat         ''      '28'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN_RESET'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_hidden_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_HIDDEN="$(BU.Main.TextFormat.SetTextFormat                ''      '8'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN'                "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_hidden_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_HIDDEN_RESET="$(BU.Main.TextFormat.SetTextFormat          ''      '28'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_HIDDEN_RESET'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_hidden_reset_lineno="$LINENO";
 
     # Italic
-    __BU_MAIN_TXT_FMT_ITALIC="$(BU.Main.Checkings.CheckTextFormat               'sitm'  '3'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC'                "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_italic_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU.Main.Checkings.CheckTextFormat         'ritm'  '23'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC_RESET'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_italic_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_ITALIC="$(BU.Main.TextFormat.SetTextFormat                'sitm'  '3'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC'                "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_italic_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_ITALIC_RESET="$(BU.Main.TextFormat.SetTextFormat          'ritm'  '23'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_ITALIC_RESET'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_italic_reset_lineno="$LINENO";
 
     # Reset
-    __BU_MAIN_TXT_FMT_RESET="$(BU.Main.Checkings.CheckTextFormat                'sgr0'  '0'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_RESET'                 "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_RESET="$(BU.Main.TextFormat.SetTextFormat                 'sgr0'  '0'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_RESET'                 "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_reset_lineno="$LINENO";
 
     # Strikethrough
-    __BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU.Main.Checkings.CheckTextFormat        ''      '9'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH'         "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_strikethrough_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU.Main.Checkings.CheckTextFormat  ''      '29'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'   "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_strikethrough_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_STRIKETHROUGH="$(BU.Main.TextFormat.SetTextFormat         ''      '9'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH'         "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_strikethrough_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET="$(BU.Main.TextFormat.SetTextFormat   ''      '29'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'   "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_strikethrough_reset_lineno="$LINENO";
 
 
     # Underline
-    __BU_MAIN_TXT_FMT_UNDERLINE="$(BU.Main.Checkings.CheckTextFormat            'smul'  '4'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE'             "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_underline_lineno="$LINENO";
-    __BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU.Main.Checkings.CheckTextFormat      'rmul'  '24'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'       "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_underline_reset_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_UNDERLINE="$(BU.Main.TextFormat.SetTextFormat             'smul'  '4'             '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE'             "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_underline_lineno="$LINENO";
+    __BU_MAIN_TXT_FMT_UNDERLINE_RESET="$(BU.Main.TextFormat.SetTextFormat       'rmul'  '24'            '--no-function';)"  || { printf "%s\n" "";  BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'       "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; }; local __bu_main_txt_fmt_underline_reset_lineno="$LINENO";
 
 
     # Blink
