--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -215,7 +215,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_COLOR_CODE_WARNING' "$__BU_M
 # Encodage des couleurs (codes de la commande "tput setaf") pour mieux lire les étapes de l'exécution du script.
 
 # Aqua blue colored text.
-__BU_MAIN_COLOR_TXT_AQUA="$(BU.Main.TextFormat.SetTextColor     "$__BU_MAIN_COLOR_CODE_AQUA"                '--no-function'    ||                { printf "%s\n" "$__BU_MAIN_COLOR_CODE_RESET";  BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize   '__BU_MAIN_COLOR_TXT_AQUA'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };)"
+__BU_MAIN_COLOR_TXT_AQUA="$(BU.Main.TextFormat.SetTextColor     "$__BU_MAIN_COLOR_CODE_AQUA"                '--no-futio'    ||               { printf "%s\n" "$__BU_MAIN_COLOR_CODE_RESET";  BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize   '__BU_MAIN_COLOR_TXT_AQUA'          "$(basename "${BASH_SOURCE[0]}")" "$LINENO"; return 1; };)"
 printf "%s" "$__BU_MAIN_COLOR_TXT_AQUA";                        BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_COLOR_TXT_AQUA'          "$__BU_MAIN_COLOR_TXT_AQUA"         'CMD'       "$(BU.Main.ModConfig.Colors.PrintColorTextVarsNameSubsCmd       'aqua blue')"                       "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
 
 # Black colored text.
