--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -17,19 +17,20 @@ function BU.Main.ModConfig.Project.GetProjectFilePath()
 {
     #**** Variables ****
     local v_cut="${__BU_MAIN_PROJECT_FILE_NAME##*./}";
-
+    local v_get_parent;
     local find_path;
-        find_path="$(BU.ModuleInit.FindPath "$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PARENT")" || \
-        {
-            echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; BU.Main.Errors.Exit 1;
-        }; pwd)" "$v_cut")";
-
-        echo "RETURN : $?";
-
-        [[ "$?" -ne 0 ]] && return 1;
 
     #**** Code ****
+    v_get_parent="$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PARENT")" || \
+        {
+            echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; return 1;
+        }; pwd)"
+
     echo "$find_path";
+
+    find_path="$(BU.ModuleInit.FindPath "$v_get_parent" "$v_cut")"; fp="$?";
+
+    [[ "$fp" -ne 0 ]] && return 1;
 
 	return 0;
 }
@@ -91,7 +92,17 @@ else
 fi
 
 # Project's file path.
-__BU_MAIN_PROJECT_FILE_PATH="$(BU.Main.ModConfig.Project.GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")" || return 1; echo "$__BU_MAIN_PROJECT_FILE_PATH";
+__BU_MAIN_PROJECT_FILE_PATH="$(BU.Main.ModConfig.Project.GetProjectFilePath "$__BU_MAIN_PROJECT_FILE_NAME")" || {
+    BU.ModuleInit.MsgAbort; echo lll;
+
+    BU.ModuleInit.AskPrintLog >&2 || {
+        if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+    };
+
+    if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi
+};
+
+echo "$__BU_MAIN_PROJECT_FILE_PATH";
 
 
 # -------
