--- a/install/.Bash-utils/config/modules/main/Project.conf
+++ b/install/.Bash-utils/config/modules/main/Project.conf
@@ -20,17 +20,19 @@ function BU.Main.ModConfig.Project.GetProjectFilePath()
     local v_get_parent;
     local find_path;
 
+    local v_return_code;
+
     #**** Code ****
     v_get_parent="$(cd "$(printf "%s" "$__BU_MAIN_PROJECT_FILE_PARENT")" || \
         {
             echo >&2; echo "IN « ${BASH_SOURCE[0]} », FUNCTION « ${FUNCNAME[0]} », LINE « $LINENO » --> ERROR : UNABLE TO GET THE " >&2; echo >&2; return 1;
         }; pwd)"
 
+    find_path="$(BU.ModuleInit.FindPath "$v_get_parent" "$v_cut")"; v_return_code="$?"
+
+    [[ "$v_return_code" -ne 0 ]] && return 1;
+
     echo "$find_path";
-
-    find_path="$(BU.ModuleInit.FindPath "$v_get_parent" "$v_cut")"; fp="$?";
-
-    [[ "$fp" -ne 0 ]] && return 1;
 
 	return 0;
 }
