Passing the new parameter to every instances of the "BU.ModuleInit.DisplayInitGlobalVarsInfos()" function

--- a/install/.Bash-utils/config/modules/main/Exit.conf
+++ b/install/.Bash-utils/config/modules/main/Exit.conf
@@ -43,48 +43,55 @@ __BU_MAIN_EXIT_NOT_PERMITTED='1';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_PERMITTED' "$__BU_MAIN_EXIT_NOT_PERMITTED" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # No such file or directory.
 __BU_MAIN_EXIT_DIR_FILE_NOT_FOUND='2';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND' "$__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the target file or folder was not found')" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Permission denied.
 __BU_MAIN_EXIT_PERMISSION_DENIED='13';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_PERMISSION_DENIED' "$__BU_MAIN_EXIT_PERMISSION_DENIED" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue "you don't have the permission to perform this action")" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # File exists.
 __BU_MAIN_EXIT_FILE_EXISTS='17';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_EXISTS' "$__BU_MAIN_EXIT_FILE_EXISTS" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the target file already exists')" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Not a directory.
 __BU_MAIN_EXIT_NOT_DIR='20';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_DIR' "$__BU_MAIN_EXIT_NOT_DIR" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the target is not a directory')" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Target is a directory.
 __BU_MAIN_EXIT_IS_DIR='21';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_IS_DIR' "$__BU_MAIN_EXIT_IS_DIR" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the target is a directory')" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Invalid argument
 __BU_MAIN_EXIT_INVALID_ARGUMENT="22";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_INVALID_ARGUMENT' "$__BU_MAIN_EXIT_INVALID_ARGUMENT" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue "bad argument provided")" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # File too large
@@ -92,25 +99,30 @@ __BU_MAIN_EXIT_FILE_TOO_LARGE="27";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_TOO_LARGE' "$__BU_MAIN_EXIT_FILE_TOO_LARGE" 'Int' \
 	"$(BU.Main.ModConfig.PrintReturnValue "file is too large")" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Not space left on the hard drive.
 __BU_MAIN_EXIT_NO_SPACE_LEFT='28';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NO_SPACE_LEFT' "$__BU_MAIN_EXIT_NO_SPACE_LEFT" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue "no space left on the target hard drive's partition")" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Read-only file system.
 __BU_MAIN_EXIT_RO_FS='30';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_RO_FS' "$__BU_MAIN_EXIT_RO_FS" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'read-only file system')" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # File name too long.
 __BU_MAIN_EXIT_FILENAME_TOO_LONG='36';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILENAME_TOO_LONG' "$__BU_MAIN_EXIT_FILENAME_TOO_LONG" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the name of the file to create is too long')" \
+	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
