--- a/install/.Bash-utils/config/modules/main/Filesystem.conf
+++ b/install/.Bash-utils/config/modules/main/Filesystem.conf
@@ -44,6 +44,7 @@ if [ "${__BU_MAIN_FS_NAME,,}" = 'apfs' ]; then
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription "Apple's APFS")" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -56,6 +57,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'btrfs' ]; then
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'Btrfs')" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -68,6 +70,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext2' ]; then
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT2')" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -80,6 +83,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext3' ]; then
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT3')" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -92,6 +96,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'ext4' ]; then
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'EXT4')" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -104,6 +109,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'jfs' ]; then
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'JFS')" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -116,6 +122,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'xfs' ]; then
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'XFS')" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -128,6 +135,7 @@ elif [ "${__BU_MAIN_FS_NAME,,}" = 'zfs' ]; then
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$(BU.Main.ModConfig.Filesystem.PrintFSLengthDescription 'ZFS')" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
@@ -141,5 +149,6 @@ else
 
     BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_FS_MAX_FILENAME_LENGTH' "$__BU_MAIN_FS_MAX_FILENAME_LENGTH" 'Int' \
         "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__FILESYSTEM__SET_GENERAL_SPECIFICATION__FILENAME_LENGTH" \
+        "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
         "$(basename "${BASH_SOURCE[0]}")" "${FUNCAME[0]}" "$(( LINENO-2 ))";
 fi
