--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -67,12 +67,12 @@ function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() { printf "
 # Getting the columns number on the current text mode according to its window's length.
 __BU_MAIN_TXT_COLS="$(tput cols || stty size | cut -d " " -f2)"
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_COLS' "$__BU_MAIN_TXT_COLS" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'cols')" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_COLS' "$__BU_MAIN_TXT_COLS" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'cols')" "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Getting the lines number on the current text mode according to its window's height.
 __BU_MAIN_TXT_LINES="$(tput lines || stty size | cut -d " " -f1)"
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "$__BU_MAIN_TXT_LINES" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'lines')" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "$__BU_MAIN_TXT_LINES" 'CMD' "$(BU.Main.ModConfig.Text.PrintTextModeCmdSubs 'lines')" "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -83,12 +83,12 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_LINES' "$__BU_MAIN_TXT_L
 __BU_MAIN_TXT_CHAR_HEADER_LINE="-"		# Caractère à afficher en boucle pour créer une ligne des headers de changement d'étapes.
 
 # Since the color global variables are defined in the "Colors.conf" file, AND since this file is already sourced before this file, it's safe to call these global variables.
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "$__BU_MAIN_TXT_CHAR_HEADER_LINE" 'Char' "This global variable stores the default character that composes each lines drawn by the ${__BU_MAIN_COLOR_TXT_FUNCTION}BU.Main.Headers.DrawLine${__BU_MAIN_COLOR_TXT_RESET} function" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_CHAR_HEADER_LINE' "$__BU_MAIN_TXT_CHAR_HEADER_LINE" 'Char' "This global variable stores the default character that composes each lines drawn by the ${__BU_MAIN_COLOR_TXT_FUNCTION}BU.Main.Headers.DrawLine${__BU_MAIN_COLOR_TXT_RESET} function" "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-3 ))";
 
 # Affichage de chevrons avant une chaîne de caractères (par exemple).
 __BU_MAIN_TXT_PRINT_TAB=">>>>"
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_PRINT_TAB' "$__BU_MAIN_TXT_PRINT_TAB" 'String' "This global variable stores the string which better showcases a string" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_PRINT_TAB' "$__BU_MAIN_TXT_PRINT_TAB" 'String' "This global variable stores the string which better showcases a string" "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -97,12 +97,12 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_PRINT_TAB' "$__BU_MAIN_T
 # Storing a string got from a specific line (with a function like "BU.Main.Files.GetLineFromTextFile()", from "main/Files.lib" source file).
 __BU_MAIN_TXT_STORE_LINE=""
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "$__BU_MAIN_TXT_STORE_LINE" 'String' "This global variable stores a string extracted from a line in a file" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_LINE' "$__BU_MAIN_TXT_STORE_LINE" 'String' "This global variable stores a string extracted from a line in a file" "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # Getting the messages printed with the "$__BU_MAIN_STAT_ECHO='true'" status ?
 __BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY=();    # Note : since this variable is an array, please leave empty the second argument of the "BU.ModuleInit.DisplayInitGlobalVarsInfos()" function.
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "" 'Array' "This array stores each error message displayed when the ${__BU_MAIN_COLOR_TXT_VAR}\$__BU_MAIN_STAT_ECHO${__BU_MAIN_COLOR_TXT_RESET} global status variable's value is set to ${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES_ARRAY' "" 'Array' "This array stores each error message displayed when the ${__BU_MAIN_COLOR_TXT_VAR}\$__BU_MAIN_STAT_ECHO${__BU_MAIN_COLOR_TXT_RESET} global status variable's value is set to ${__BU_MAIN_COLOR_TXT_VAR}true${__BU_MAIN_COLOR_TXT_RESET}" "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -111,7 +111,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_STORE_ECHO_TRUE_MESSAGES
 # Splitting a string into substrings.
 __BU_MAIN_TXT_ERR_SUBSTR_DELIM=' [/|\] ';
 
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "$__BU_MAIN_TXT_ERR_SUBSTR_DELIM" "String" "This global variable stores the string which serves as a delimiter for separating a string into substrings" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_TXT_ERR_SUBSTR_DELIM' "$__BU_MAIN_TXT_ERR_SUBSTR_DELIM" "String" "This global variable stores the string which serves as a delimiter for separating a string into substrings" "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
 # -----------------------------------------------
 
@@ -154,35 +154,35 @@ function BU.Main.ModConfig.Text.WrapTextFormattingSubSection()
 
 
     # Blink
-    printf "%s" "$__BU_MAIN_TXT_FMT_BLINK";                 BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_BLINK'                   "$__BU_MAIN_TXT_FMT_BLINK"                  'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "blink")"           "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_blink_lineno";
-    printf "%s" "$__BU_MAIN_TXT_FMT_BLINK_RESET";           BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_BLINK_RESET'             "$__BU_MAIN_TXT_FMT_BLINK_RESET"            'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "blink")"           "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_blink_reset_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_BLINK";                 BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_BLINK'                   "$__BU_MAIN_TXT_FMT_BLINK"                  'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "blink")"           "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_blink_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_BLINK_RESET";           BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_BLINK_RESET'             "$__BU_MAIN_TXT_FMT_BLINK_RESET"            'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "blink")"           "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_blink_reset_lineno";
 
     # Bold
-    printf "%s" "$__BU_MAIN_TXT_FMT_BOLD";                  BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_BOLD'                    "$__BU_MAIN_TXT_FMT_BOLD"                   'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "bold")"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_bold_lineno";
-    printf "%s" "$__BU_MAIN_TXT_FMT_BOLD_RESET";            BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_BOLD_RESET'              "$__BU_MAIN_TXT_FMT_BOLD_RESET"             'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "bold")"            "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_bold_reset_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_BOLD";                  BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_BOLD'                    "$__BU_MAIN_TXT_FMT_BOLD"                   'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "bold")"            "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_bold_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_BOLD_RESET";            BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_BOLD_RESET'              "$__BU_MAIN_TXT_FMT_BOLD_RESET"             'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "bold")"            "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_bold_reset_lineno";
 
     # Dim
-    printf "%s" "$__BU_MAIN_TXT_FMT_DIM";                   BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_DIM'                     "$__BU_MAIN_TXT_FMT_DIM"                    'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "dim")"             "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_dim_lineno";
-    printf "%s" "$__BU_MAIN_TXT_FMT_DIM_RESET";             BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_DIM_RESET'               "$__BU_MAIN_TXT_FMT_DIM_RESET"              'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "dim")"             "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_dim_reset_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_DIM";                   BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_DIM'                     "$__BU_MAIN_TXT_FMT_DIM"                    'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "dim")"             "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_dim_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_DIM_RESET";             BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_DIM_RESET'               "$__BU_MAIN_TXT_FMT_DIM_RESET"              'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "dim")"             "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_dim_reset_lineno";
 
     # Hidden (useful for password typing).
-    printf "%s" "$__BU_MAIN_TXT_FMT_HIDDEN";                BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_HIDDEN'                  "$__BU_MAIN_TXT_FMT_HIDDEN"                 'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "hidden")"          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_hidden_lineno";
-    printf "%s" "$__BU_MAIN_TXT_FMT_HIDDEN_RESET";          BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_HIDDEN_RESET'            "$__BU_MAIN_TXT_FMT_HIDDEN_RESET"           'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "hidden")"          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_hidden_reset_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_HIDDEN";                BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_HIDDEN'                  "$__BU_MAIN_TXT_FMT_HIDDEN"                 'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "hidden")"          "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_hidden_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_HIDDEN_RESET";          BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_HIDDEN_RESET'            "$__BU_MAIN_TXT_FMT_HIDDEN_RESET"           'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "hidden")"          "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_hidden_reset_lineno";
 
     # Italic
-    printf "%s" "$__BU_MAIN_TXT_FMT_ITALIC";                BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_ITALIC'                  "$__BU_MAIN_TXT_FMT_ITALIC"                 'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "italic")"          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_italic_lineno";
-    printf "%s" "$__BU_MAIN_TXT_FMT_ITALIC_RESET";          BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_ITALIC_RESET'            "$__BU_MAIN_TXT_FMT_ITALIC_RESET"           'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "italic")"          "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_italic_reset_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_ITALIC";                BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_ITALIC'                  "$__BU_MAIN_TXT_FMT_ITALIC"                 'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "italic")"          "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_italic_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_ITALIC_RESET";          BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_ITALIC_RESET'            "$__BU_MAIN_TXT_FMT_ITALIC_RESET"           'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "italic")"          "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_italic_reset_lineno";
 
     # Reset
-    printf "%s" "$__BU_MAIN_TXT_FMT_RESET";                 BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_RESET'                   "$__BU_MAIN_TXT_FMT_RESET"                  'CMD' "$(BU.Main.ModConfig.Text.PrintAllResetCmdSubs)"                  "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_reset_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_RESET";                 BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_RESET'                   "$__BU_MAIN_TXT_FMT_RESET"                  'CMD' "$(BU.Main.ModConfig.Text.PrintAllResetCmdSubs)"                  "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_reset_lineno";
 
     # Strikethrough
-    printf "%s" "$__BU_MAIN_TXT_FMT_STRIKETHROUGH";         BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_STRIKETHROUGH'           "$__BU_MAIN_TXT_FMT_STRIKETHROUGH"          'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "strikethrough")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_strikethrough_lineno";
-    printf "%s" "$__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET";   BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'     "$__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET"    'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "strikethrough")"   "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_strikethrough_reset_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_STRIKETHROUGH";         BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_STRIKETHROUGH'           "$__BU_MAIN_TXT_FMT_STRIKETHROUGH"          'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "strikethrough")"   "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_strikethrough_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET";   BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET'     "$__BU_MAIN_TXT_FMT_STRIKETHROUGH_RESET"    'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "strikethrough")"   "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_strikethrough_reset_lineno";
 
     # Underline
-    printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE";             BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_UNDERLINE'               "$__BU_MAIN_TXT_FMT_UNDERLINE"              'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "Underline")"       "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_underline_lineno";
-    printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET";       BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'         "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET"        'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "Underline")"       "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_underline_reset_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE";             BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_UNDERLINE'               "$__BU_MAIN_TXT_FMT_UNDERLINE"              'CMD' "$(BU.Main.ModConfig.Text.PrintFormatCmdSubs  "Underline")"       "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_underline_lineno";
+    printf "%s" "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET";       BU.ModuleInit.DisplayInitGlobalVarsInfos    '__BU_MAIN_TXT_FMT_UNDERLINE_RESET'         "$__BU_MAIN_TXT_FMT_UNDERLINE_RESET"        'CMD' "$(BU.Main.ModConfig.Text.PrintResetCmdSubs   "Underline")"       "$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" "$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$__bu_main_txt_fmt_underline_reset_lineno";
 }
 
 BU.Main.ModConfig.Text.WrapTextFormattingSubSection || return 1;
