Improving the Bash Utils framework's initializing process

--- a/install/.Bash-utils/config/modules/main/colors.conf
+++ b/install/.Bash-utils/config/modules/main/colors.conf
@@ -53,7 +53,7 @@ function BU.Main.ModConfig.Colors.PrintColorTextVarsNameSubsCmd() { printf "$__B
 
 # shellcheck disable=SC2059,SC2154
 function BU.Main.ModConfig.Colors.PrintVariableNameFailedToInitialize() {
-    BU.ModuleInit.PrintLogError "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COLOR_VARIABLE_FAILED_TO_BE_INITIALIZED" "$3" 'ERR_BUINIT__BU_MAIN_MODCONFIG__COLOR_VAR_NOT_INIT';
+    BU.ModuleInit.PrintLogError "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__COLOR_VARIABLE_FAILED_TO_BE_INITIALIZED" "${BASH_SOURCE[0]}" "$3" 'ERR_BUINIT__BU_MAIN_MODCONFIG__COLOR_VAR_NOT_INIT';
 
     printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__COLORS__PrintVariableNameFailedToInitialize_FNCT\n" "$2" "$3" "$1";
 }
