Translating some more text

--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -14,20 +14,20 @@
 ## COLUMNS AND LINES
 
 # Writing the command substitution text when the text mode is processed.
-function BU.Main.ModConfig.Text.PrintTextModeCmdSubs()  { printf "This command substitution executes the « tput $1 » OR the « stty size » commands in order to get the total number of « %s » on the current text mode" "$1"; }
+function BU.Main.ModConfig.Text.PrintTextModeCmdSubs()  { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintTextModeCmdSubs__FNCT" "$1" "$1"; }
 
 # -----------------------------------------------
 
 ## TEXT FORMATTING
 
 # Writing the command substitution text when a formatting is defined.
-function BU.Main.ModConfig.Text.PrintFormatCmdSubs()    { printf "This command substitution executes the « BU.Main.TextFormat.SetTextFormat() » function in order to format the text with the defined « %s » text formatting" "$1"; }
+function BU.Main.ModConfig.Text.PrintFormatCmdSubs()    { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintFormatCmdSubs__FNCT" "$1"; }
 
 # Writing the command substitution text when a resetting is defined.
-function BU.Main.ModConfig.Text.PrintResetCmdSubs()     { printf "This command substitution executes the « BU.Main.TextFormat.SetTextFormat() » function in order to reset the text from the « %s » text formatting" "$1"; }
+function BU.Main.ModConfig.Text.PrintResetCmdSubs()     { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintResetCmdSubs__FNCT" "$1"; }
 
 # Writing the command substitution text when a total resetting is defined.
-function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "This command substitution executes the « BU.Main.TextFormat.SetTextFormat() » function in order to reset the text from the every text formatting"; }
+function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__PrintAllResetCmdSubs__FNCT"; }
 
 # -----------------------------------------------
 
@@ -40,7 +40,12 @@ function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "This command s
 ## ERROR FUNCTIONS
 
 # Writing the name of the variable that could not be initialized with it's command substitution.
-function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() { printf "The « %s » text global variable cannot be initialized because of a problem happening during the call of the associated command substitution" "$2" "$3" "$1"; }
+function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() {
+    # $1 -> Variable's name | $2 -> "$(basename "${BASH_SOURCE[0]}")" | $3 -> LINENO (line number)
+    BU.ModuleInit.PrintLogError "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__TEXT_VARIABLE_FAILED_TO_BE_INITIALIZED" "${BASH_SOURCE[0]}" "$3" 'ERR_BUINIT__BU_MAIN_MODCONFIG__TEXT_VAR_NOT_INIT';
+
+    printf "The « %s » text global variable cannot be initialized because of a problem happening during the call of the associated command substitution" "$2" "$3" "$1";
+}
 
 # -----------------------------------------------
 
