Big changes done with the "BU.ModuleInit.PrintLogError()" function

--- a/install/.Bash-utils/config/modules/main/text.conf
+++ b/install/.Bash-utils/config/modules/main/text.conf
@@ -42,7 +42,7 @@ function BU.Main.ModConfig.Text.PrintAllResetCmdSubs()  { printf "$__BU_MODULE_I
 # Writing the name of the variable that could not be initialized with it's command substitution.
 function BU.Main.ModConfig.Text.PrintVariableNameFailedToInitialize() {
     # $1 -> Variable's name | $2 -> "$(basename "${BASH_SOURCE[0]}")" | $3 -> LINENO (line number)
-    BU.ModuleInit.PrintLogError "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__TEXT__TEXT_VARIABLE_FAILED_TO_BE_INITIALIZED" "${BASH_SOURCE[0]}" "$3" 'ERR_BUINIT__BU_MAIN_MODCONFIG__TEXT_VAR_NOT_INIT';
+    BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "$3" 'ERR_BUINIT__BU_MAIN_MODCONFIG__TEXT_VAR_NOT_INIT';
 
     printf "The « %s » text global variable cannot be initialized because of a problem happening during the call of the associated command substitution in the « %s » file\n" "$1" "$2";
 }
