Big save : translation of the variables descriptions in the main module's configuration files

--- a/install/.Bash-utils/config/modules/main/Exit.conf
+++ b/install/.Bash-utils/config/modules/main/Exit.conf
@@ -14,7 +14,7 @@
 ## TEXT PRINTING
 
 # Writing the command substitution text for the return values definitions.
-function BU.Main.ModConfig.PrintReturnValue { printf "This global variable stores the return value of the last command in this situation : « %s »" "$1"; }
+function BU.Main.ModConfig.PrintReturnValue { printf "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__PrintReturnValue_FNCT" "$1"; }
 
 # -----------------------------------------------
 
@@ -42,7 +42,7 @@ function BU.Main.ModConfig.PrintReturnValue { printf "This global variable store
 __BU_MAIN_EXIT_NOT_PERMITTED='1';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_PERMITTED' "$__BU_MAIN_EXIT_NOT_PERMITTED" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__NOT_PERMITTED__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -50,7 +50,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_PERMITTED' "$__BU_M
 __BU_MAIN_EXIT_DIR_FILE_NOT_FOUND='2';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND' "$__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__DIR_FILE_NOT_FOUND__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -58,7 +58,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_DIR_FILE_NOT_FOUND' "$_
 __BU_MAIN_EXIT_PERMISSION_DENIED='13';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_PERMISSION_DENIED' "$__BU_MAIN_EXIT_PERMISSION_DENIED" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__PERMISSION_DENIED__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -66,7 +66,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_PERMISSION_DENIED' "$__
 __BU_MAIN_EXIT_FILE_EXISTS='17';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_EXISTS' "$__BU_MAIN_EXIT_FILE_EXISTS" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__FILE_EXISTS__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -74,7 +74,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_EXISTS' "$__BU_MAI
 __BU_MAIN_EXIT_NOT_DIR='20';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_DIR' "$__BU_MAIN_EXIT_NOT_DIR" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__NOT_DIR__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -82,7 +82,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NOT_DIR' "$__BU_MAIN_EX
 __BU_MAIN_EXIT_IS_DIR='21';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_IS_DIR' "$__BU_MAIN_EXIT_IS_DIR" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__IS_DIR__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -90,7 +90,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_IS_DIR' "$__BU_MAIN_EXI
 __BU_MAIN_EXIT_INVALID_ARGUMENT="22";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_INVALID_ARGUMENT' "$__BU_MAIN_EXIT_INVALID_ARGUMENT" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__INVALID_ARGUMENT__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -98,8 +98,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_INVALID_ARGUMENT' "$__B
 __BU_MAIN_EXIT_FILE_TOO_LARGE="27";
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_TOO_LARGE' "$__BU_MAIN_EXIT_FILE_TOO_LARGE" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue "file is too large")" \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__FILE_TOO_LARGE__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -107,7 +106,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILE_TOO_LARGE' "$__BU_
 __BU_MAIN_EXIT_NO_SPACE_LEFT='28';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NO_SPACE_LEFT' "$__BU_MAIN_EXIT_NO_SPACE_LEFT" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__NO_SPACE_LEFT__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -115,7 +114,7 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_NO_SPACE_LEFT' "$__BU_M
 __BU_MAIN_EXIT_RO_FS='30';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_RO_FS' "$__BU_MAIN_EXIT_RO_FS" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__RO_FS__VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
 
@@ -123,6 +122,6 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_RO_FS' "$__BU_MAIN_EXIT
 __BU_MAIN_EXIT_FILENAME_TOO_LONG='36';
 
 BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_EXIT_FILENAME_TOO_LONG' "$__BU_MAIN_EXIT_FILENAME_TOO_LONG" 'Int' \
-	"$(BU.Main.ModConfig.PrintReturnValue 'the operation was not permitted')" \
+	"$(BU.Main.ModConfig.PrintReturnValue "$__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__EXIT__FILENAME_TOO_LONG_VAR_DESC")" \
 	"$__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF" \
 	"$(basename "${BASH_SOURCE[0]}")" "${FUNCNAME[0]}" "$(( LINENO-2 ))";
